# libopenweathermap_client

./: .gitmodules  CMakeLists.txt  README.md
src/: openweather.c  openweather.h
